<resources>
    <string name="app_name">ButterflyMX</string>

    <string name="activity_incoming_accept">Accept</string>
    <string name="activity_incoming_call_front_door">Front door</string>
    <string name="activity_incoming_call_mute">Mute</string>
    <string name="activity_incoming_call_open_door">Open door</string>
    <string name="activity_incoming_call_panel_colon">Panel:</string>
    <string name="activity_incoming_call_speaker">Speaker</string>
    <string name="activity_incoming_camera">"Camera"</string>
    <string name="activity_incoming_decline">Decline</string>
    <string name="activity_incoming_end_call">End Call</string>
    <string name="activity_incoming_open_door_cap">Open Door</string>
    <string name="activity_incoming_call_visitor">visitor</string>

    <string name="activity_login_email_address">Email Address</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_prompt_password">Password</string>


    <string name="account">Account</string>
    <string name="features">Features</string>
    <string name="features_swipe_to_open_door">Feature 1: Swipe to Open Door</string>
    <string name="feature_use_a_virtual_key">Feature 2: Use a Virtual Key</string>
    <string name="account_phone_number">Phone Number</string>
    <string name="account_email">Email Address</string>
    <string name="account_sign_out">Sign Out</string>
    <string name="account_edit_password">EDIT PASSWORD</string>
    <string name="loading">Loading...</string>
    <string name="new_call_notif_you_have_a_visitor">You have a visitor</string>
    <string name="new_call_notif_default_title">Front door</string>
    <string name="call_was_answered_on_another_device">Call was answered on another device.</string>
    <string name="missed_call">Missed Call</string>
    <string name="features_basic_features">Basic Features</string>
    <string name="features_open_door">Open Door</string>
    <string name="features_features">Features</string>
    <string name="select_unit">Select Unit</string>
    <string name="select_panel">Select Panel</string>
    <string name="select_unit_fragment_available">Available</string>
    <string name="select_panel_fragment_press_to_open">Press to Open</string>
    <string name="select_panel_fragment_wait">Wait...</string>
    <string name="select_unit_fragment__not_available">Not Available</string>
    <string name="auth_error">Something went wrong with your authorization</string>
    <string name="activity_sign_in">Sign In via ButterflyMX</string>
    <string name="empty_fb_token">Firebase token can\'t be empty</string>
    <string name="server_production">Production</string>
    <string name="server_staging">Staging</string>
    <string name="server_sandbox">Sandbox</string>
    <string name="choose_server">Choose Server</string>
    <string name="server_error">Something went wrong with choosen server</string>

    <string name="sandbox_client_id">[SANDBOX_CLIENT_ID]</string>
    <string name="sandbox_secret_id">[SANDBOX_CLIENT_SECRET]</string>

    <string name="staging_client_id">[SANDBOX_CLIENT_ID]</string>
    <string name="staging_secret_id">[SANDBOX_CLIENT_SECRET]</string>

    <string name="prod_client_id">[SANDBOX_CLIENT_ID]</string>
    <string name="prod_secret_id">[SANDBOX_CLIENT_SECRET]</string>


    <string name="redirect_uri">com.butterflymx.oauth://oauth</string>

</resources>
